# Gluon

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile
src/: benchmark.cpp  benchmark.h  bitboardhelpers.cpp  bitboardhelpers.h  board.cpp  board.h  boardhelpers.cpp  boardhelpers.h  boardstate.h  debug.cpp  debug.h  engine.cpp  engine.h  evaluate.cpp  evaluate.h  kingsafetyinfo.cpp  kingsafetyinfo.h  legalmoveinfo.cpp  legalmoveinfo.h  main.cpp  move.cpp  move.h  movegenerator.cpp  movegenerator.h  movelist.h  piece.h  pieceplacementmap.cpp  pieceplacementmap.h  pieceplacements.cpp  pieceplacements.h  precomputedmovedata.h  search.cpp  search.h  transpositiontable.cpp  transpositiontable.h  undomovestate.h  zobrist.cpp  zobrist.h
